--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,6 @@
-# --Esto seria con application.properties--
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# spring.datasource.url=jdbc:mysql://localhost:3306/airlines
-# spring.datasource.username=root
-# spring.datasource.password=ivan1705
-# spring.jpa.show-sql=true
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
 spring:
+  application: 
+      name: product-api
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
@@ -20,5 +13,14 @@ spring:
     show-sql: 'true'
     hibernate:
       ddl-auto: update
-# dollarAapi:
-#    dollar_url: https://dolarapi.com/v1/dolares/tarjeta
+eureka:
+    instance:
+      preferIpAddress: true
+    client:
+      fetchRegistry: true
+      registerWithEureka: true
+      serviceUrl:
+        defaultZone: http://localhost:8761/eureka
+
+server:
+  port: 0
